--- a/example/scatter/example_scatter.ipynb
+++ b/example/scatter/example_scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "fig = ternary_diagram(df.columns[0:-1], df.iloc[:, 0:-1], df.iloc[:, -1], minimum = 0, maximum = 1, norm = True, mode = 'scatter')"
+    "fig = ternary_diagram(df.columns[0:-1], df.iloc[:, 0:-1], z = df.iloc[:, -1], minimum = 0, maximum = 1, norm = True, mode = 'scatter')"
    ]
   }
  ],
