--- a/example/mono_scatter/example_mono_scatter.ipynb
+++ b/example/mono_scatter/example_mono_scatter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "source": [
-    "### デバッグ用"
+    "### デバッグ用 (ternary_diagramをインストールしている場合は不要)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -45,6 +45,13 @@
    ]
   },
   {
+   "source": [
+    "### プロットのみ"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -63,6 +70,13 @@
     "td = ternary_diagram(df.columns)\n",
     "td.scatter(df, color = 'blue', facecolor = \"None\", lw = 2)"
    ]
+  },
+  {
+   "source": [
+    "### 連結線を引く場合"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
