--- a/example/mono_scatter/example_mono_scatter.ipynb
+++ b/example/mono_scatter/example_mono_scatter.ipynb
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x132790fd0>"
+       "<matplotlib.collections.PathCollection at 0x11f8d1f70>"
       ]
      },
      "execution_count": 3,
