--- a/example/scatter/example_scatter.ipynb
+++ b/example/scatter/example_scatter.ipynb
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12bfd63a0>"
+       "<matplotlib.collections.PathCollection at 0x11f79f4c0>"
       ]
      },
      "execution_count": 4,
