--- a/example/contour/example_contour.ipynb
+++ b/example/contour/example_contour.ipynb
@@ -163,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.tri.tricontour.TriContourSet at 0x1460e62b0>"
+       "<matplotlib.tri.tricontour.TriContourSet at 0x1464652b0>"
       ]
      },
      "execution_count": 4,
@@ -208,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x146a701c0>"
+       "<matplotlib.colorbar.Colorbar at 0x1479f9b80>"
       ]
      },
      "execution_count": 5,
@@ -237,14 +237,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "td.fig.savefig(\"example_contour.png\", dpi=144)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x146e7c370>"
+       "<matplotlib.colorbar.Colorbar at 0x12021a250>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,15 +276,6 @@
     ")\n",
     "# # you can customize the colorbar like `plt.colorbar`\n",
     "td.colorbar(mappable=mappable, label=\"Example of `contour`\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "td.fig.savefig(\"example_contour.png\", dpi=144)\n"
    ]
   }
  ],
