refactor: formatting with ruff

--- a/example/contour/example_contour.ipynb
+++ b/example/contour/example_contour.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from ternary_diagram import TernaryDiagram\n"
+    "from ternary_diagram import TernaryDiagram"
    ]
   },
   {
@@ -115,7 +115,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"example_contour.csv\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -145,7 +145,7 @@
    ],
    "source": [
     "materials = df.columns[0:3].tolist()\n",
-    "materials\n"
+    "materials"
    ]
   },
   {
@@ -183,7 +183,7 @@
    ],
    "source": [
     "td = TernaryDiagram(materials=materials)\n",
-    "td.contour(df[materials], z=df[\"z\"])\n"
+    "td.contour(df[materials], z=df[\"z\"])"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "td = TernaryDiagram(materials=materials)\n",
     "mappable = td.contour(df.iloc[:, :3], df.loc[:, \"z\"], flag_cbar=False)\n",
     "# you can customize the colorbar like `plt.colorbar`\n",
-    "td.colorbar(mappable=mappable, label=\"Example of `contour`\")\n"
+    "td.colorbar(mappable=mappable, label=\"Example of `contour`\")"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td.fig.savefig(\"example_contour.png\", dpi=144)\n"
+    "td.fig.savefig(\"example_contour.png\", dpi=144)"
    ]
   },
   {
@@ -275,7 +275,7 @@
     "    df.loc[:, materials], df.loc[:, \"z\"].round(1), flag_cbar=False, fill=False\n",
     ")\n",
     "# # you can customize the colorbar like `plt.colorbar`\n",
-    "td.colorbar(mappable=mappable, label=\"Example of `contour`\")\n"
+    "td.colorbar(mappable=mappable, label=\"Example of `contour`\")"
    ]
   }
  ],
