--- a/example/mono_scatter/example_mono_scatter.ipynb
+++ b/example/mono_scatter/example_mono_scatter.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
-    "from ternary_diagram import TernaryDiagram\n"
+    "from ternary_diagram import TernaryDiagram"
    ]
   },
   {
@@ -94,7 +94,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"example_mono_scatter.csv\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "source": [
     "fig = plt.figure(facecolor=\"white\")\n",
     "td = TernaryDiagram(df.columns)\n",
-    "td.scatter(df, color=\"blue\", facecolor=\"None\", lw=2)\n"
+    "td.scatter(df, color=\"blue\", facecolor=\"None\", lw=2)"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "td.scatter(df.iloc[10:], label=\">10\")\n",
     "td.plot([[1, 0, 1], [0, 2, 3]], label=\"tie line\")\n",
     "td.ax.legend()\n",
-    "fig.tight_layout()\n"
+    "fig.tight_layout()"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"example_mono_scatter.png\", dpi=144)\n"
+    "fig.savefig(\"example_mono_scatter.png\", dpi=144)"
    ]
   }
  ],
