--- a/example/multiple_figure/multiple_figure.ipynb
+++ b/example/multiple_figure/multiple_figure.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from ternary_diagram import TernaryDiagram\n"
+    "from ternary_diagram import TernaryDiagram"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(1, 2, dpi=72, facecolor=\"white\", figsize=(10, 3.6))\n"
+    "fig, axes = plt.subplots(1, 2, dpi=72, facecolor=\"white\", figsize=(10, 3.6))"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "fpath_contour = os.path.join(fpath_example, \"contour\", \"example_contour.csv\")\n",
     "fpath_mono_scatter = os.path.join(\n",
     "    fpath_example, \"mono_scatter\", \"example_mono_scatter.csv\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "source": [
     "df_contour = pd.read_csv(fpath_contour)\n",
     "df_mono_scatter = pd.read_csv(fpath_mono_scatter)\n",
-    "display(df_contour.head(), df_mono_scatter.head())\n"
+    "display(df_contour.head(), df_mono_scatter.head())"
    ]
   },
   {
@@ -248,7 +248,7 @@
     "td1 = TernaryDiagram(materials=materials, ax=axes[0])\n",
     "td1.contour(vector=df_contour[materials], z=df_contour[\"z\"])\n",
     "\n",
-    "fig\n"
+    "fig"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "td2 = TernaryDiagram(materials=materials, ax=axes[1])\n",
     "td2.scatter(vector=df_mono_scatter[materials])\n",
     "\n",
-    "fig\n"
+    "fig"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"multiple_figure.png\", dpi=144)\n"
+    "fig.savefig(\"multiple_figure.png\", dpi=144)"
    ]
   }
  ],
