--- a/example/scatter/example_scatter_with_annotations.ipynb
+++ b/example/scatter/example_scatter_with_annotations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,15 +17,14 @@
     }
    ],
    "source": [
+    "# `element_recognition` is a module for recognizing elements from chemical formula.\n",
+    "# See: https://github.com/yu9824/element_recognition\n",
+    "import element_recognition\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from ternary_diagram import TernaryDiagram\n",
     "\n",
-    "# `element_recognition` is a module for recognizing elements from chemical formula.\n",
-    "# See: https://github.com/yu9824/element_recognition\n",
-    "import element_recognition\n",
-    "\n",
-    "element_recognition.__version__\n"
+    "element_recognition.__version__"
    ]
   },
   {
@@ -35,7 +34,7 @@
    "outputs": [],
    "source": [
     "materials = [\"Li4SiO4\", \"Li4GeO4\", \"Li4SnO4\"]\n",
-    "products = [\"Li4Si0.1Ge0.4Sn0.5O4\"]\n"
+    "products = [\"Li4Si0.1Ge0.4Sn0.5O4\"]"
    ]
   },
   {
@@ -92,7 +91,7 @@
    ],
    "source": [
     "ratio = element_recognition.get_ratio(materials=materials, products=products)\n",
-    "ratio\n"
+    "ratio"
    ]
   },
   {
@@ -113,7 +112,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(facecolor=\"white\", dpi=144)\n",
-    "td = TernaryDiagram(materials=materials, ax=ax)\n"
+    "td = TernaryDiagram(materials=materials, ax=ax)"
    ]
   },
   {
@@ -136,7 +135,7 @@
    "source": [
     "# you can annotate the points with list of strings\n",
     "td.scatter(ratio, annotations=ratio.index)\n",
-    "fig\n"
+    "fig"
    ]
   },
   {
@@ -145,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"example_scatter_with_annotations.png\", dpi=144)\n"
+    "fig.savefig(\"example_scatter_with_annotations.png\", dpi=144)"
    ]
   }
  ],
