--- a/example/scatter/example_scatter.ipynb
+++ b/example/scatter/example_scatter.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
-    "from ternary_diagram import TernaryDiagram\n"
+    "from ternary_diagram import TernaryDiagram"
    ]
   },
   {
@@ -100,7 +100,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"example_scatter.csv\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -121,7 +121,7 @@
    ],
    "source": [
     "materials = df.columns[0:3]\n",
-    "materials\n"
+    "materials"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "source": [
     "fig = plt.figure(facecolor=\"w\")\n",
     "td = TernaryDiagram(materials=materials)\n",
-    "td.scatter(df[materials], z=df[\"z\"], z_min=0, z_max=1)\n"
+    "td.scatter(df[materials], z=df[\"z\"], z_min=0, z_max=1)"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td.fig.savefig(\"example_scatter.png\", dpi=144)\n"
+    "td.fig.savefig(\"example_scatter.png\", dpi=144)"
    ]
   }
  ],
